k8s/book-store-price-dev-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-store-price-dev-01
spec:
  selector:
    app: book-store-price-dev-01
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP  # 设置为 ClusterIP 以仅在集群内部暴露
